--- a/.src/theme/default/theme.css
+++ b/.src/theme/default/theme.css
@@ -105,7 +105,7 @@ article .blog-title a{
 article .blog-meta{
     font-size: 14px;
     margin: 5px 0;
-    color: #f47e00;
+    color: #888;
 }
 
 article .blog-meta .tag{
