--- a/.src/theme/default/theme.css
+++ b/.src/theme/default/theme.css
@@ -13,6 +13,7 @@ body{
     padding: 0;
     font-size: 16px;
     background-color: #e2e2e2;
+    color:#222;
 }
 
 a{
@@ -103,9 +104,9 @@ article .blog-title a{
 }
 
 article .blog-meta{
-    font-size: 14px;
+    font-size: 12px;
     margin: 5px 0;
-    color: #888;
+    color: #666;
 }
 
 article .blog-meta .tag{
@@ -114,6 +115,10 @@ article .blog-meta .tag{
 
 article .blog-meta .info{
     border-bottom: 1px dotted #ccc;
+}
+
+article .blog-content{
+  line-height:22.5px;
 }
 
 .footer{
