--- a/.src/theme/default/theme.css
+++ b/.src/theme/default/theme.css
@@ -16,6 +16,14 @@ body{
     color:#222;
 }
 
+p{
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
+
 a{
 	text-decoration: none;
     color:#000;
